<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/space32"
    tools:context=".mvvm.views.activities.SplashActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/icon"
        android:scaleType="centerCrop"
        android:src="@drawable/ngaji" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space16"
        android:text="@string/iqro_digital"
        android:textSize="@dimen/font24"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space16"
        android:text="@string/subtext"
        android:textAlignment="center"
        android:textSize="@dimen/font16" />

</LinearLayout>