<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/size300"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardBackgroundColor="@color/teal_700"
    app:cardCornerRadius="@dimen/size16"
    app:cardElevation="@dimen/size8">

    <LinearLayout
        android:layout_width="@dimen/size300"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/space16">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/test_mendengarkan_huruf_hijaiyah"
            android:textColor="@color/white"
            android:textSize="@dimen/font18"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtPercentage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/space16"
            android:gravity="center_horizontal"
            android:text="@string/_0"
            android:textColor="@color/white"
            android:textSize="@dimen/font24"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtCorrectAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/space16"
            android:gravity="center_horizontal"
            android:text="@string/jawaban_benar"
            android:textColor="@color/white"
            android:textSize="@dimen/font16" />

        <TextView
            android:id="@+id/txtIncorrectAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/jawaban_salah"
            android:textColor="@color/white"
            android:textSize="@dimen/font16" />

        <Button
            android:id="@+id/btnBack"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size30"
            android:layout_marginHorizontal="@dimen/space32"
            android:layout_marginTop="@dimen/space40"
            android:background="@drawable/bg_button_white"
            android:text="@string/kembali_ke_menu_utama"
            android:textColor="@color/teal_700" />

    </LinearLayout>

</androidx.cardview.widget.CardView>