<?xml version="1.0" encoding="utf-8"?>
<co.bayueka.iqra.customcomponents.LockableNestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nsvLockable"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/space16"
    tools:context=".mvvm.views.activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="172dp"
            android:contentDescription="@string/icon"
            android:src="@drawable/mengaji"/>

        <LinearLayout
            android:id="@+id/linearHijaiyah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_main_menu"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/space8">

            <ImageView
                android:layout_width="@dimen/size80"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/icon"
                android:src="@drawable/quran" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space16"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/huruf_hijaiyah"
                    android:textSize="@dimen/font15"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mengenal_30_huruf_hijaiyah"
                    android:textSize="@dimen/font14" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearIqro1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_main_menu"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/space8">

            <ImageView
                android:layout_width="@dimen/size80"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/icon"
                android:src="@drawable/icon_iqro" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space16"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/iqro"
                    android:textSize="@dimen/font15"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/jilid_1"
                    android:textSize="@dimen/font14" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearIqro2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_main_menu"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/space8">

            <ImageView
                android:layout_width="@dimen/size80"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/icon"
                android:src="@drawable/icon_iqro" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space16"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/iqro"
                    android:textSize="@dimen/font15"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/jilid_2"
                    android:textSize="@dimen/font14" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearIqro3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_main_menu"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/space8"
            android:visibility="gone">

            <ImageView
                android:layout_width="@dimen/size80"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/icon"
                android:src="@drawable/icon_iqro" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space16"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/iqro"
                    android:textSize="@dimen/font15"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/jilid_3"
                    android:textSize="@dimen/font14" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearIqro4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_main_menu"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/space8"
            android:visibility="gone">

            <ImageView
                android:layout_width="@dimen/size80"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/icon"
                android:src="@drawable/icon_iqro" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space16"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/iqro"
                    android:textSize="@dimen/font15"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/jilid_4"
                    android:textSize="@dimen/font14" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearIqro5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_main_menu"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/space8"
            android:visibility="gone">

            <ImageView
                android:layout_width="@dimen/size80"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/icon"
                android:src="@drawable/icon_iqro" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space16"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/iqro"
                    android:textSize="@dimen/font15"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/jilid_5"
                    android:textSize="@dimen/font14" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearIqro6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_main_menu"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/space8"
            android:visibility="gone">

            <ImageView
                android:layout_width="@dimen/size80"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/icon"
                android:src="@drawable/icon_iqro" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space16"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/iqro"
                    android:textSize="@dimen/font15"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/jilid_6"
                    android:textSize="@dimen/font14" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearTestListening"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_main_menu"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/space8">

            <ImageView
                android:layout_width="@dimen/size80"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/icon"
                android:src="@drawable/quran" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space16"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/test_mendengarkan"
                    android:textSize="@dimen/font15"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/test_mendengarkan_huruf_hijaiyah"
                    android:textSize="@dimen/font14" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearTestSpeaking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_main_menu"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/space8">

            <ImageView
                android:layout_width="@dimen/size80"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/icon"
                android:src="@drawable/quran" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space16"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/test_pengucapan"
                    android:textSize="@dimen/font15"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/test_pengucapan_huruf_hijaiyah"
                    android:textSize="@dimen/font14" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearTraining"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_main_menu"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/space8">

            <ImageView
                android:id="@+id/quran"
                android:layout_width="@dimen/size80"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/icon"
                android:src="@drawable/quran" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space16"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/training_suara"
                    android:textSize="@dimen/font15"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/melatih_untuk_pengenalan_suara"
                    android:textSize="@dimen/font14" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</co.bayueka.iqra.customcomponents.LockableNestedScrollView>